Fixed profile pic not centering on mobile devices

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -59,6 +59,7 @@ body {
 
       @media #{$text-small} {
         float: none;
+        display: block;
         margin: 0 auto;
         padding: 20px;
         width: 200px;
